Added nicknames to authors in hw2_solution.tex

--- a/hw2/hw2_solution.tex
+++ b/hw2/hw2_solution.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{amsmath, amssymb}
 \title{CMPS 142: Homework Assignment 2}
-\author{Raymond Colebaugh - 1377877\\Jeffery Petersen - ID\\Peter Czupil - 1317993}
+\author{Raymond "The Dude" Colebaugh - 1377877\\Jeffery "\#YOLOSWAG" Petersen - ID\\Peter "Gettin' there man" Czupil - 1317993}
 \begin{document}
 \maketitle
 \begin{enumerate}
