--- a/hw2/hw2_solution.tex
+++ b/hw2/hw2_solution.tex
@@ -30,10 +30,9 @@
 				-0.0149
        			 \end{bmatrix}
   		$$
-		Out of 768 patients, 500 didn't have diabetes thus our
-		$$bias\ = \frac{500}{768} = 0.651$$\\
-		Therefore the equation for our decision boundary is: 
-		$$\Sigma_i \ a_i * x_i \ + \ 0.651\ = \ 0$$
+		Our bias turned out to be equal to $8.40$. Therefore the equation for our decision 				boundary is: 
+		$$\Sigma_i \ a_i * x_i \ + \ 8.40\ = \ 0$$
+		By plugging the $x^{(i)}$'s whose prob. distribution is close to $0.50$/$0.50$ into our 				decision boundary equation, we have found that indeed, the points lie very close it.   
 	     \\\\
                 \item
                     \begin{tabular}{l | c c c c c c}
