--- a/hw2/hw2_solution.tex
+++ b/hw2/hw2_solution.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{amsmath, amssymb}
+\usepackage[margin=1in]{geometry}
 \title{CMPS 142: Homework Assignment 2}
 \author{Raymond Colebaugh - 1377877\\Jeffery Petersen - ID\\Peter Czupil - 1317993}
 \begin{document}
@@ -96,9 +97,39 @@
             \end{enumerate}
         \item
             Given the existing data, we can calculate the mean of the GPA of
-            honors students to be $ \frac{4.0 + 3.7 + 2.5}{3} = 3.4 $.
-            $$ P( X_{GPA} ) = \frac{1}{\sqrt{2 \pi} 0.6} e^{\frac{(x - 3.4)^2 }{1.2} }$$
-            $$ P( X_{AP} ) = \prod\limits_{i = 1}^{n} {P_H}^{x^{(i)}}(1 - P_H)^{1 - x^{(i)}} $$
+            honors students to be $ \mu_H = \frac{4.0 + 3.7 + 2.5}{3} = 3.4 $, and a
+            standard deviation of 
+            $$ \sigma_H = \sqrt{\frac{(4.0 - \mu_H)^2 + (3.7 - \mu_H)^2 + (2.5 - \mu_H)^2}{3}} = 0.648 $$
+            We then find the mean and standard deviation of GPA of non-honor students.
+            $$ \mu_N = \frac{3.8 + 3.3 + 3.0 + 3.0 + 2.7 + 2.2}{6} = 3 $$
+            $$ \sigma_N = \sqrt{\frac{(3.8 - \mu_N)^2 + (3.3 - \mu_N)^2 + (3.0 - \mu_N)^2 + (3.0 - \mu_N)^2 + (2.7 - \mu_N)^2 + (2.2 - \mu_N)^2}{6}} = 0.493 $$
+            Last, we calculate the general mean and standard deviation, whether honor students or not:
+            $$ \mu = \frac{4 + 3.7 + 2.5 + 3.8 + 3.3 + 3 + 3 + 2.7 + 2.2}{9} = 3.133 $$
+            $$ \sigma^2 = \frac{ (4-\mu)^2 + (3.7-\mu)^2 + (2.5-\mu)^2 + (3.8-\mu)^2 + (3.3-\mu)^ 2 + (3-\mu)^2 + (3-\mu)^2 + (2.7-\mu)^2 + (2.2-\mu)^2}{9} $$
+            $$ \sigma = 0.582 $$
+            We then find the gaussian functions of $P(GPA = x)$ and $P(GPA = x \mid H)$:
+            % and the gaussian function of $P(GPA = value \mid N)$:
+            $$ P( GPA = x ) = \frac{1}{\sqrt{2 \pi} 0.5} e^{(x - 3.1)^2 }$$
+            $$ P( GPA = x \mid H ) = \frac{1}{\sqrt{2 \pi} 0.6} e^{\frac{(x - 3.4)^2 }{1.2} }$$
+            % $$ P( GPA = x \mid N ) = \frac{1}{\sqrt{2 \pi} 0.5} e^{(x - 3)^2 } $$
+            % $$ P( X_{AP} ) = \prod\limits_{i = 1}^{n} {P_H}^{x^{(i)}}(1 - P_H)^{1 - x^{(i)}} $$
+            Now, find $P(AP \mid H)$, $P(not AP \mid H)$, $P(AP \mid N)$, and $P(not AP \mid N)$
+            by maximum likelihood estimation for Bernoulli distribution.
+
+            $$ P(H | AP) = \frac{P(AP | H) P(H)}{P(AP)} =
+                \frac{\frac{2}{3} * \frac{1}{3}}{\frac{4}{9}} = \frac{2}{9} * \frac{9}{4} = \frac{1}{2}$$
+            $$ P(H | not AP) = \frac{P(not AP | H) P(H)}{P(AP)} =
+            \frac{\frac{1}{3} * \frac{1}{3}}{\frac{5}{9}} = \frac{1}{9} * \frac{9}{5} = \frac{1}{5}$$
+            $$ P(H | GPA = x) = \frac{P(GPA = x | H) P(H) }{P(GPA = x)} $$
+
+            $$ P(H | AP, GPA = x) = P(H | AP) * P(H | GPA = x) $$
+            $$ P(H | not AP, GPA = x) = P(H | not AP) * P(H | GPA = x) $$
+
+            find value(s) where $P(H | AP, GPA = value) = 0.5 $
+            find value(s) where $P(H | not AP, GPA = value) = 0.5 $
+
+            find $value_1$ and $value_2$ where for $value_1 < GPA < value 2: P(H | AP, GPA) >= 0.5 $
+            find $value_1$ and $value_2$ where for $value_1 < GPA < value 2: P(H | not AP, GPA) >= 0.5 $  \\
             Our final prediction is: \\
             If AP courses are taken, predict $H$ if the GPA is between ..., and
             if AP courses are not taken, predict $H$ if the GPA is between ... \\
