add ID# for J.P.

--- a/hw2/hw2_solution.tex
+++ b/hw2/hw2_solution.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath, amssymb}
 \usepackage[margin=1in]{geometry}
 \title{CMPS 142: Homework Assignment 2}
-\author{Raymond Colebaugh - 1377877\\Jeffery Petersen - ID\\Peter Czupil - 1317993}
+\author{Raymond Colebaugh - 1377877\\Jeffrey Petersen - 1329242\\Peter Czupil - 1317993}
 \begin{document}
 \maketitle
 \begin{enumerate}
