--- a/hw3/hw3_solution.tex
+++ b/hw3/hw3_solution.tex
@@ -9,11 +9,16 @@
         \item 
         \item
             In executing grid search with the specified bounds on parameters, we
-            determined the following costs and gammas for SMO, where $X$ is the 
-            cost and $y$ is $\gamma$:
-            $$ \begin{tabular}{c c c c c c | c}
-                $c_{ min }$ & $c_{ max }$ & $c_{ step }$ & $\gamma_{ min }$ & $\gamma_{ max }$ & $\gamma_{ step }$ & Accuracy \\ \hline
-                   1    &   16    &    1     &       -5     &     2        &        1
+            determined the following costs and gammas for SMO:
+            $$ \begin{tabular}{c c c c c c c | c c c}
+                $C_{ min }$ & $C_{ max }$ & $C_{ step }$ & $\gamma_{ min }$ & $\gamma_{ max }$ & $\gamma_{ step }$ & Sample Size & C & $\gamma$ & Accuracy \\ \hline
+                1    &   16    &    1     &       -5     &     2        &        1         &  25\%    &  16 & 0 & 93.6318 \%   \\
+                1    &   16    &    1     &       -5     &     2        &        1         &  50\%    &  14 & 1 & 93.6101 \% \\
+                15    &   32    &    1     &       0     &     2        &        0.25      &  10\%    &  31 & 0 & 93.6536 \%  \\
+                15    &   32    &    1     &       0     &     2        &        0.25      &  25\%    &  25 & 0 & 93.697 \%  \\
+                23    &   27    &    0.25  &       0.7   &     1.3      &        0.1       &  10\%    &  27 & 0.7  & 93.3275 \% \\
+                23    &   27    &    0.25  &       0.7   &     1.3      &        0.1       &  25\%    &  25.75 & 0.7 & 93.371 \% \\
+                23    &   27    &    0.25  &       0.7   &     1.3      &        0.1       &  50\%    &  24.75 & 0.7 & 93.371 \%
             \end{tabular} $$
             Where the expression for $c$ was $i$ and the expression for $\gamma$ was $10^i$.
         \item
