Added peter's name + id and enum list for #1 parts

--- a/hw4/hw4_solution.tex
+++ b/hw4/hw4_solution.tex
@@ -2,11 +2,17 @@
 \usepackage{amsmath, amssymb, graphicx, verbatim}
 \usepackage[margin=1in]{geometry}
 \title{CMPS 142: Homework Assignment 4}
-\author{Jeffrey Petersen - 1329242\\Raymond Colebaugh - 1377877}
+\author{Jeffrey Petersen - 1329242\\Peter Czupil - 1317993\\Raymond Colebaugh - 1377877}
 \begin{document}
 \maketitle
 \begin{enumerate}
         \item 
+            \begin{enumerate}
+                \item
+                \item
+                \item
+                \item
+            \end{enumerate}
         \item 
 \end{enumerate}
 \end{document}
