Finished parts (a) and (b) for problem 1

--- a/hw4/hw4_solution.tex
+++ b/hw4/hw4_solution.tex
@@ -9,8 +9,9 @@
         \item 
             \begin{enumerate}
                 \item
+                    \noindent{The probability that a point randomly drawn from $p$ is located somewhere in the interval $(z_{\epsilon}, \theta)$ is equal to $\epsilon$. Thus the probability that a point falls outside this interval is the complement of the previous probability. Therefore, $p((0, z_{\epsilon}]) = 1 - \epsilon$. }
                 \item
-                \item
+                    Assuming that the training set may contain duplicate $x$ values, the probability that all points lie outside the interval $(z_{\epsilon}, \theta]$ is the product of the probability from part (a) for all $x$'s in the training set. Therefore $p(X \notin (z_{\epsilon}, \theta]) = \prod_{i = 1}^{N} 1 - \epsilon = (1 - \epsilon)^N$ 
                 \item
             \end{enumerate}
         \item 
